# bcxbot

.github/workflows/: update.yml
bot/: config.py  handlers.py  inline_handler.py  logger.py  main.py  pyproject.toml  replit.nix  screenshot.py  utils.py  xe_parser.py
docker/: docker-compose.yml
nginx/conf.d/: base.conf
requirements/: bot.txt
