[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.13",
    "pillow>=11.1.0",
    "python-telegram-bot==20.8",
    "pytz>=2025.1",
    "simpleeval>=1.0.3",
    "telegram>=0.0.1",
    "trafilatura>=2.0.0",
    "twilio>=9.5.0",
]
